# spatiallab

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
django/: Dockerfile  celery_app.py  manage.py  pyproject.toml
django/accounts/: forms.py  models.py  serializers.py  token_generator.py  urls.py  views.py
django/accounts/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_user_is_verified_alter_user_is_active.py  0004_waitlist.py
django/accounts/templates/: acc_activate_email.html  password_reset_email.html
django/gis/: apps.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
django/gis/migrations/: 0001_initial.py  0002_postgisgeometrycolumns_postgisspatialrefsys_and_more.py  0003_layer_created_at_layer_modified_at.py  0004_project_projectlayer.py  0005_project_description.py  0006_alter_project_extent.py  0007_remove_feature_name.py  0008_directory_layer_directory_projectlayergroup.py  0009_rename_key_property_name_remove_property_feature_and_more.py  0010_rename_feature_layerfeature_and_more.py  0011_alter_layer_unique_together.py  0012_alter_layer_unique_together_and_more.py  0013_layerfeature_properties_delete_featurepropertyvalue.py  0014_projectlayer_basemap_alter_projectlayer_layer.py  0015_alter_projectlayer_options_projectlayer_order.py  0016_projectlayer_visible.py
django/spatiallab/: celery.py  settings.py  urls.py  wsgi.py
geoserver/: Dockerfile
nginx/: nginx.conf
pg_tileserv/: Dockerfile  pg_tileserv.toml
react/: Dockerfile  package-lock.json  package.json
(+56 files in other folders)
